# Videomatte-HQ

./: .gitignore  Agents.md  BEGINNER_GUIDE.md  INSTALL.md  README.md  UPGRADE_TASKS_PHASES_1_2_3.md  Videomatte-HQ-v2-Design-Document.md  install.bat  pyproject.toml  run_tests.bat  run_videomatte.bat  run_web.bat
scripts/: diagnose_pipeline.py  run_full_9748555.py
src/videomatte_hq/: __init__.py  cli.py  config.py  mask_builder.py  project.py  prompt_boxes.py  prompt_mask_range.py  propagation_assist.py  protocols.py  safe_math.py  sam_builder.py  samurai_backend.py
src/videomatte_hq/background/: bg_confidence.py  fg_diff.py  photometric.py  plate_estimation.py
src/videomatte_hq/band/: adaptive_band.py  feather.py  trimap.py
src/videomatte_hq/diagnostics/: __init__.py  stage_debug.py
src/videomatte_hq/roi/: qc.py  (+4 more)
src/videomatte_hq_web/: __init__.py  __main__.py  jobs.py  server.py  server_runtime.py
tasks/: lessons.md  todo.md
tests/: test_assignment_api.py  test_cli.py  test_config.py  test_eval_harness.py  test_mask_builder.py  test_memory_region_constraint.py  test_optionb_qc.py  test_orchestrator_auto_diagnosis.py  test_orchestrator_stop_after_stage.py  test_orchestrator_v2.py  test_pass_matte_tuning.py  test_pass_memory.py  test_pass_refine.py  test_pass_temporal_cleanup.py  test_project_state.py  test_prompt_adapters.py  test_prompt_boxes.py  test_reader.py  test_samurai_backend_routing.py  test_stage_debug.py  test_stage_matanyone2.py  test_stage_qc.py  test_stage_refine.py  test_stage_segment.py  test_stage_trimap.py  test_stitch_repro.py  test_temporal_mitigation_pack.py  test_tiling_stitch.py  test_vitmatte_shapes.py  test_web_jobs.py  test_writer.py
tools/: compare_v1_v2.py  resmooth.py  run_test_clip.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts  uiPrefs.ts
(+92 files in other folders)
